# mvc-rust

./: .env  Cargo.toml  README.md  users.db
migrations/2020-08-04-124432_create_users/: up.sql
migrations/2020-08-05-131950_add_uuid/: down.sql  up.sql
src/: auth.rs  connect.rs  controller.rs  main.rs  middleware.rs  models.rs  schema.rs
src/controller/: auth.rs  user2_controller.rs  user_controller.rs
src/models/: user.rs  users2.rs
src/router/: user_routes.rs
